[metadata]
name = audioken
version = 0.0.1
author = Leonardo Pepino
author_email = lpepino@dc.uba.ar
description = AudioKen
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = audioken
